# Voyage-Enterprise-Decision-System

./: .editorconfig  .guix-channel  CITATION.cff  ECOSYSTEM.scm  LICENSE.txt  README.adoc  RSR_COMPLIANCE.adoc  STATE.scm  codemeta.json  docker-compose.yml  guix.scm  justfile
.well-known/: ai.txt  dc.xml  humans.txt  provenance.json  security.txt
config/: surrealdb-schema.surql  xtdb.yaml
db/schemas/: surrealdb.surql  xtdb-schema.edn
db/seeds/: transport_network.surql
docs/: CITATIONS.adoc
scripts/: requirements.txt  seed_data.py
src/clojure-constraints/: deps.edn
src/clojure-constraints/resources/: config.edn
src/clojure-constraints/src/veds/constraints/: core.clj  http.clj  (+5 more)
src/deno-api/: Dockerfile  deno.json  rescript.json
src/deno-api/src/: Constraint.res  Handlers.res  Router.res  Types.res  main.ts
src/elixir-api/: Dockerfile  mix.exs
src/elixir-api/config/: config.exs  dev.exs  prod.exs  runtime.exs
src/elixir-api/lib/: veds_web.ex
src/elixir-api/lib/veds/: application.ex
src/elixir-api/lib/veds_web/: endpoint.ex  router.ex
src/julia-viz/: Dockerfile  Project.toml
src/julia-viz/src/: VEDSViz.jl
src/julia-viz/src/components/: ConstraintDash.jl  GeoMap.jl  ParetoPlot.jl  RealTimeTracker.jl
src/julia-viz/test/: runtests.jl
src/rust-routing/: Cargo.toml  Dockerfile  build.rs
src/rust-routing/proto/: optimizer.proto
src/rust-routing/src/: main.rs
src/rust-routing/src/constraints/: mod.rs
src/rust-routing/src/db/: mod.rs
src/rust-routing/src/graph/: mod.rs
src/rust-routing/src/grpc/: mod.rs
src/rust-routing/src/optimizer/: mod.rs
(+5 files in other folders)
